@@ -284,12 +284,18 @@ static int output(struct dquot *dquot, char *name)
 static void report_it(struct quota_handle *h, int type)
 {
 	char bgbuf[MAXTIMELEN], igbuf[MAXTIMELEN];
+	char *spacehdr;
+
+	if (flags & FL_SHORTNUMS)
+		spacehdr = _("Space");
+	else
+		spacehdr = _("Block");
 
 	printf(_("*** Report for %s quotas on device %s\n"), type2name(type), h->qh_quotadev);
 	time2str(h->qh_info.dqi_bgrace, bgbuf, TF_ROUND);
 	time2str(h->qh_info.dqi_igrace, igbuf, TF_ROUND);
 	printf(_("Block grace time: %s; Inode grace time: %s\n"), bgbuf, igbuf);
-	printf(_("                        Block limits                File limits\n"));
+	printf(_("                        %s limits                File limits\n"), spacehdr);
 	printf(_("%-9s       used    soft    hard  grace    used  soft  hard  grace\n"), (type == USRQUOTA)?_("User"):_("Group"));
 	printf("----------------------------------------------------------------------\n");
 
