@@ -1,4 +1,5 @@
 Changes in quota-tools from 3.16 to 3.18
+* Improved header of quota an repquota output when -s option is used (Jan Kara)
 * Fixed mountpoint scanning when NFS mountpoint is specified on command line (Jan Kara)
 * Updated manpage of quotactl(2) (Jan Kara)
 
